# delta20

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  pyproject.toml
src/delta20/: defs.py  geometry.py  indexing.py  packing.py
src/delta20/precomputed/: canonical_d20.py  raw_d20.py
test/: test_smoke.py
tests/: test_geometry.py
tests/d20/: test_integrity.py  test_neighbors.py  test_orientation.py  test_packing.py  test_topology.py  test_vertices.py  testutils.py
tools/: build_canonical_d20.py
