[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta20"
version = "0.0.1"
description = "Spin-aware hierarchical triangular globe index over an icosahedron (d20)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["icosahedron", "triangles", "geospatial", "indexing", "DGGS", "geodesic", "htm", "d20"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---- Formatting & linting for tests (simple) ----
[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "S", "B", "C90"]  # imports, py-upgrades, security, bugbear, mccabe
ignore = ["S101"]  # allow assert in tests
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = []
mypy_path = "src"